--- a/src/01-gallery.html
+++ b/src/01-gallery.html
@@ -12,6 +12,7 @@
     <p><a href="index.html">Go back</a></p>
 
     <!-- Add gallery items to this list -->
+    <p>test string</p>
     <div class="gallery"></div>
 
     <script src="js/01-gallery.js" type="module"></script>
