makes 3 tasks of homework

--- a/src/02-video.html
+++ b/src/02-video.html
@@ -18,8 +18,9 @@
       frameborder="0"
       allowfullscreen
       allow="autoplay; encrypted-media"
+      data-vimeo-id
     ></iframe>
-
+    <div></div>
     <script src="js/02-video.js" type="module"></script>
   </body>
 </html>
